adicionando target=_blank no html

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div>
                 <img class="container__imagem" src="imagens/crunchyroll-logo-0.png" alt="logo da crunchyroll" >
                 <div>
-                    <a href="https://www.crunchyroll.com/pt-br/welcome?referrer=newweb_organic_header&return_url=https%3A%2F%2Fwww.crunchyroll.com%2Fpt-br%2F#plans" class="container__botao">Iniciar teste gratuito de 14 dias</a>
-                    <a href="https://www.crunchyroll.com/pt-br/welcome/login?referrer=newweb_organic_header&return_url=https%3A%2F%2Fwww.crunchyroll.com%2Fpt-br%2F" class="container__botao">Já sou assinante. Iniciar Sessão!</a>
+                    <a target ="_blank" href="https://www.crunchyroll.com/pt-br/welcome?referrer=newweb_organic_header&return_url=https%3A%2F%2Fwww.crunchyroll.com%2Fpt-br%2F#plans" class="container__botao">Iniciar teste gratuito de 14 dias</a>
+                    <a target="_blank" href="https://www.crunchyroll.com/pt-br/welcome/login?referrer=newweb_organic_header&return_url=https%3A%2F%2Fwww.crunchyroll.com%2Fpt-br%2F" class="container__botao">Já sou assinante. Iniciar Sessão!</a>
                 </div>
                 <h1 class="container__titulo">O Maior catálago de Anime do mundo </h1>
             </div>
@@ -36,7 +36,7 @@
         <section class="container secundario">
             <div >
                 <p class="container__paragrafo2 ">Só o Combo MEGA FAN (12 meses) oferece 16% de desconto, com offline viewing e podendo assistir em até 4 telas, onde, quando e como quiser.</p>
-                <a href="https://www.crunchyroll.com/pt-br/welcome?referrer=newweb_organic_header&return_url=https%3A%2F%2Fwww.crunchyroll.com%2Fpt-br%2F#plans" class="container__botao botao__dois">Assine o Combo MEGA FAN ANUAL</a>
+                <a target="_blank" href="https://www.crunchyroll.com/pt-br/welcome?referrer=newweb_organic_header&return_url=https%3A%2F%2Fwww.crunchyroll.com%2Fpt-br%2F#plans" class="container__botao botao__dois">Assine o Combo MEGA FAN ANUAL</a>
             </div>
             <img class="container__terceiraImagem" src="imagens/vash_terceiraImagem.png" alt="Imagens de Trigun Stampede">
         </section>
@@ -105,19 +105,19 @@
                 <p>Sobre a crunchyroll:</p>
             </li>
             <li class="lista__sobre__mim">
-                <a class="sobre__mim" href="https://www.instagram.com/Crunchyroll_PT/">Instagram</a>
+                <a class="sobre__mim" target="_blank" href="https://www.instagram.com/Crunchyroll_PT/">Instagram</a>
             </li>
             <li class="lista__sobre__mim">
-                <a class="sobre__mim" class="" href="https://www.facebook.com/Crunchyroll.pt/">Facebook</a>
+                <a class="sobre__mim" target="_blank" href="https://www.facebook.com/Crunchyroll.pt/">Facebook</a>
             </li>
             <li class="lista__sobre__mim">
-                <a class="sobre__mim" href="https://twitter.com/crunchyroll_pt">Twitter</a>
+                <a class="sobre__mim" target="_blank"  href="https://twitter.com/crunchyroll_pt">Twitter</a>
             </li>
             <li class="lista__sobre__mim">
-                <a class="sobre__mim" href="https://www.youtube.com/c/CrunchyrollBR">Youtube </a>
+                <a class="sobre__mim" target="_blank" href="https://www.youtube.com/c/CrunchyrollBR">Youtube </a>
             </li>
             <li class="lista__sobre__mim">
-                <a class="sobre__mim" href="https://www.tiktok.com/@crunchyroll_pt">TikTok</a>
+                <a class="sobre__mim" target="_blank" href="https://www.tiktok.com/@crunchyroll_pt">TikTok</a>
             </li>
             </ul>
 
@@ -127,13 +127,13 @@
                 <p >Sobre mim:</p>
             </li>
             <li class="lista__sobre__mim">
-                <a class="sobre__mim" href="https://www.linkedin.com/in/jo%C3%A3o-pedro-bernardino-75931019a/">Linkedin</a>
+                <a class="sobre__mim" target="_blank" href="https://www.linkedin.com/in/jo%C3%A3o-pedro-bernardino-75931019a/">Linkedin</a>
             </li>
             <li class="lista__sobre__mim">
-                <a class="sobre__mim" href="https://github.com/jotabtw">GitHub</a>
+                <a class="sobre__mim" target="_blank" href="https://github.com/jotabtw">GitHub</a>
             </li>
             <li class="lista__sobre__mim">
-                <a class="sobre__mim" href="https://www.instagram.com/jotabtw_/">Instagram</a>
+                <a class="sobre__mim" target="_blank" href="https://www.instagram.com/jotabtw_/">Instagram</a>
             </li>
         </ul>
         
